syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.showcase.mysql.grpc";

package io.graphoenix.showcase.mysql.grpc;

import "enums.proto";
import "objects.proto";
import "input_objects.proto";

message MutationIntroSchemaResponse {
    optional IntroSchema intro_schema = 1;
    optional string json = 2;
}
message MutationIntroSchemaListResponse {
    repeated IntroSchema intro_schema_list = 1;
    optional string json = 2;
}
message MutationIntroTypeResponse {
    optional IntroType intro_type = 1;
    optional string json = 2;
}
message MutationIntroTypeListResponse {
    repeated IntroType intro_type_list = 1;
    optional string json = 2;
}
message MutationIntroTypeInterfacesResponse {
    optional IntroTypeInterfaces intro_type_interfaces = 1;
    optional string json = 2;
}
message MutationIntroTypeInterfacesListResponse {
    repeated IntroTypeInterfaces intro_type_interfaces_list = 1;
    optional string json = 2;
}
message MutationIntroTypePossibleTypesResponse {
    optional IntroTypePossibleTypes intro_type_possible_types = 1;
    optional string json = 2;
}
message MutationIntroTypePossibleTypesListResponse {
    repeated IntroTypePossibleTypes intro_type_possible_types_list = 1;
    optional string json = 2;
}
message MutationIntroFieldResponse {
    optional IntroField intro_field = 1;
    optional string json = 2;
}
message MutationIntroFieldListResponse {
    repeated IntroField intro_field_list = 1;
    optional string json = 2;
}
message MutationIntroInputValueResponse {
    optional IntroInputValue intro_input_value = 1;
    optional string json = 2;
}
message MutationIntroInputValueListResponse {
    repeated IntroInputValue intro_input_value_list = 1;
    optional string json = 2;
}
message MutationIntroEnumValueResponse {
    optional IntroEnumValue intro_enum_value = 1;
    optional string json = 2;
}
message MutationIntroEnumValueListResponse {
    repeated IntroEnumValue intro_enum_value_list = 1;
    optional string json = 2;
}
message MutationIntroDirectiveResponse {
    optional IntroDirective intro_directive = 1;
    optional string json = 2;
}
message MutationIntroDirectiveListResponse {
    repeated IntroDirective intro_directive_list = 1;
    optional string json = 2;
}
message MutationIntroDirectiveLocationsResponse {
    optional IntroDirectiveLocations intro_directive_locations = 1;
    optional string json = 2;
}
message MutationIntroDirectiveLocationsListResponse {
    repeated IntroDirectiveLocations intro_directive_locations_list = 1;
    optional string json = 2;
}
message MutationUserResponse {
    optional User user = 1;
    optional string json = 2;
}
message MutationUserListResponse {
    repeated User user_list = 1;
    optional string json = 2;
}
message MutationUserPhonesResponse {
    optional UserPhones user_phones = 1;
    optional string json = 2;
}
message MutationUserPhonesListResponse {
    repeated UserPhones user_phones_list = 1;
    optional string json = 2;
}
message MutationUserTest1Response {
    optional UserTest1 user_test1 = 1;
    optional string json = 2;
}
message MutationUserTest1ListResponse {
    repeated UserTest1 user_test1_list = 1;
    optional string json = 2;
}
message MutationUserTest2Response {
    optional UserTest2 user_test2 = 1;
    optional string json = 2;
}
message MutationUserTest2ListResponse {
    repeated UserTest2 user_test2_list = 1;
    optional string json = 2;
}
message MutationUserRoleResponse {
    optional UserRole user_role = 1;
    optional string json = 2;
}
message MutationUserRoleListResponse {
    repeated UserRole user_role_list = 1;
    optional string json = 2;
}
message MutationRoleResponse {
    optional Role role = 1;
    optional string json = 2;
}
message MutationRoleListResponse {
    repeated Role role_list = 1;
    optional string json = 2;
}
message MutationRoleRoleTypeResponse {
    optional RoleRoleType role_role_type = 1;
    optional string json = 2;
}
message MutationRoleRoleTypeListResponse {
    repeated RoleRoleType role_role_type_list = 1;
    optional string json = 2;
}
message MutationOrganizationResponse {
    optional Organization organization = 1;
    optional string json = 2;
}
message MutationOrganizationListResponse {
    repeated Organization organization_list = 1;
    optional string json = 2;
}
message MutationIsDeprecatedResponse {
    optional bool is_deprecated = 1;
    optional string json = 2;
}
message MutationVersionResponse {
    optional int32 version = 1;
    optional string json = 2;
}
message MutationRealmIdResponse {
    optional string realm_id = 1;
    optional string json = 2;
}
message MutationCreateUserIdResponse {
    optional string create_user_id = 1;
    optional string json = 2;
}
message MutationCreateTimeResponse {
    optional string create_time = 1;
    optional string json = 2;
}
message MutationUpdateUserIdResponse {
    optional string update_user_id = 1;
    optional string json = 2;
}
message MutationUpdateTimeResponse {
    optional string update_time = 1;
    optional string json = 2;
}
message MutationCreateGroupIdResponse {
    optional string create_group_id = 1;
    optional string json = 2;
}